--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <label>Saison :
           <select id="season-select"></select>
         </label>
-        <button id="btn-load-standings">Recalculer</button>
+        <button id="btn-load-standings">Ok</button>
         <span class="status" id="standings-status"></span>
       </div>
 
@@ -498,3 +498,4 @@
 
 </body>
 </html>
+
