--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Styles externes -->
-  <link rel="stylesheet" href="style.css" />
+  link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
   <!-- HEADER -->
   <header class="sunset-header">
     <div class="header-left">
-      <!-- Remplace "logo.png" par le nom réel de ton image si différent -->
-      logo.png
+     <img src="logo.png" alt="Sunset Hoops" class="logo">
       <div class="title-block">
         <h1>Sunset Hoops</h1>
         <p class="sub"></p>
@@ -28,6 +28,7 @@
       <button class="tab" data-tab="teams">Équipes</button>
       <button class="tab" data-tab="players">Joueurs</button>
     </nav>
+	<script src="script.js" defer></script>
   </header>
 
   <!-- CONTENU -->
