--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <label>Saison :
           <select id="season-select"></select>
         </label>
-        <button id="btn-load-standings">Recalculer</button>
+        <button class="tab" id="btn-load-standings">Recalculer</button>
         <span id="standings-status" class="muted"></span>
       </div>
 
