--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- TEAMS -->
     <section id="teams" class="panel" style="display:none">
       <div class="controls">
-        <button id="btn-load-teams">Charger les équipes</button>
+        <button class="tab" id="btn-load-teams">Charger les équipes</button>
         <span class="muted" id="teams-status"></span>
       </div>
       <div class="teams-grid" id="teams-grid"></div>
