--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <label>Saison :
           <select id="season-select"></select>
         </label>
-        <button class="tab" id="btn-load-standings">Recalculer</button>
+        <button id="btn-load-standings">Recalculer</button>
         <span id="standings-status" class="muted"></span>
       </div>
 
@@ -77,7 +77,7 @@
     <!-- TEAMS -->
     <section id="teams" class="panel" style="display:none">
       <div class="controls">
-        <button class="tab" id="btn-load-teams">Charger les équipes</button>
+        <button id="btn-load-teams">Charger les équipes</button>
         <span class="muted" id="teams-status"></span>
       </div>
       <div class="teams-grid" id="teams-grid"></div>
