--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Onglets : toujours sur une seule ligne (géré par CSS: nowrap + overflow-x) -->
     <nav>
-      <button class="tab active" data-tab="scores">Scores du jour</button>
+      <button class="tab active" data-tab="scores">Scores</button>
       <button class="tab" data-tab="standings">Classements</button>
       <button class="tab" data-tab="teams">Équipes</button>
       <button class="tab" data-tab="players">Joueurs</button>
