--- a/index.html
+++ b/index.html
@@ -1,101 +1,57 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Sunset Hoops</title>
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- Styles externes -->
-  <link rel="stylesheet" href="style.css">
-
+  <title>Scores NBA</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-  <!-- HEADER -->
-  <header class="sunset-header">
-    <div class="header-left">
-     <img src="logo.png" alt="Sunset Hoops" class="logo">
-      <div class="title-block">
-        <h1>Sunset Hoops</h1>
-        <p class="sub"></p>
+  <main class="container">
+    <header class="header">
+      <div>
+        <h1>Scores NBA</h1>
+        <p class="hint">Données : BallDontLie • Logos : SVG publics</p>
       </div>
+    </header>
+
+    <!-- Contrôles -->
+    <div class="controls">
+      <label for="game-date">Date :</label>
+      <input type="date" id="game-date" />
+      <button id="today-btn" type="button">Aujourd’hui</button>
     </div>
 
-    <!-- Onglets : toujours sur une seule ligne (géré par CSS: nowrap + overflow-x) -->
-    <nav>
-      <button class="tab active" data-tab="scores">Scores</button>
-      <button class="tab" data-tab="standings">Classements</button>
-      <button class="tab" data-tab="teams">Équipes</button>
-      <button class="tab" data-tab="players">Joueurs</button>
-    </nav>
-	<script src="script.js" defer></script>
-  </header>
+    <!-- Loader -->
+    <div id="loader" class="loader hidden" aria-hidden="true" aria-live="polite">
+      <div class="spinner" role="status" aria-label="Chargement"></div>
+      <p>Chargement…</p>
+    </div>
 
-  <!-- CONTENU -->
-  <main>
+    <!-- Scores -->
+    <section id="scores" class="scores" aria-live="polite"></section>
 
-    <!-- SCORES -->
-    <section id="scores" class="panel">
-      <!-- Boutons dynamiques J-2..J+2 (rendus par JS) -->
-      <div class="controls" id="score-days"></div>
-      <span id="scores-status" class="muted"></span>
-      <div id="scores-list"></div>
-    </section>
-
-    <!-- STANDINGS -->
-    <section id="standings" class="panel" style="display:none">
-      <div class="controls">
-        <label>Saison :
-          <select id="season-select"></select>
-        </label>
-        <button id="btn-load-standings">Recalculer</button>
-        <span id="standings-status" class="muted"></span>
-      </div>
-
-      <div class="standings-grid">
-        <div>
-          <h3>Conférence Est</h3>
-          <table class="table" id="east-table">
-            <thead>
-              <tr><th>#</th><th>Équipe</th><th class="right">V</th><th class="right">D</th><th class="right">%</th></tr>
-            </thead>
-            <tbody></tbody>
-          </table>
+    <!-- Template d'un match -->
+    <template id="game-template">
+      <article class="game" role="group" aria-label="Match">
+        <div class="team team--away">
+          <img class="team-logo" alt="Logo équipe visiteur" width="36" height="36" loading="lazy" />
+          <span class="team-name"></span>
         </div>
-        <div>
-          <h3>Conférence Ouest</h3>
-          <table class="table" id="west-table">
-            <thead>
-              <tr><th>#</th><th>Équipe</th><th class="right">V</th><th class="right">D</th><th class="right">%</th></tr>
-            </thead>
-            <tbody></tbody>
-          </table>
+        <div class="score"></div>
+        <div class="team team--home">
+          <img class="team-logo" alt="Logo équipe domicile" width="36" height="36" loading="lazy" />
+          <span class="team-name"></span>
         </div>
-      </div>
-    </section>
-
-    <!-- TEAMS -->
-    <section id="teams" class="panel" style="display:none">
-      <div class="controls">
-        <button id="btn-load-teams">Charger les équipes</button>
-        <span class="muted" id="teams-status"></span>
-      </div>
-      <div class="teams-grid" id="teams-grid"></div>
-    </section>
-
-    <!-- PLAYERS -->
-    <section id="players" class="panel" style="display:none">
-      <div class="controls">
-        <input type="text" id="player-q" placeholder="Rechercher un joueur…" />
-        <button id="btn-search-players">Rechercher</button>
-        <span class="muted" id="players-status"></span>
-      </div>
-      <div id="players-list"></div>
-    </section>
-
+        <div class="actions">
+          <button class="stats-btn" type="button">Voir les stats</button>
+        </div>
+        <div class="stats-panel hidden"></div>
+      </article>
+    </template>
   </main>
 
-  <!-- Script externe -->
-  <script src="script.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
