--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Scores NBA</title>
+  <title>Sunset Hoops</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <main class="container">
     <header class="header">
-      <h1>Scores NBA</h1>
+      <h1>Sunset Hoops</h1>
     </header>
 
     <!-- Navigation principale -->
