--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
   <main class="container">
     <header class="header">
-      <h1>Sunset Hoops</h1>
+    <div class="brand">
+    <img src="./logo.png" alt="Sunset Hoops - logo" class="brand-logo" />
+    <h1 class="brand-title">Sunset Hoops</h1>
+  </div>
+
     </header>
 
     <!-- Navigation principale -->
